--- a/templates/page.html
+++ b/templates/page.html
@@ -74,6 +74,7 @@
             <a href="https://linuxreport.net" target="_blank" class="nav-link-linux">Linux</a>
             <a href="https://pvreport.org" target="_blank" class="nav-link-pv">PV</a>
             <a href="https://aireport.keithcu.com" target="_blank" class="nav-link-ai">AI</a>
+            <a href="https://robotreport.keithcu.com" target="_blank" class="nav-link-robot">Robots</a>
             <a href="https://news.thedetroitilove.com" target="_blank" class="nav-link-techno">Techno</a>
             <a href="https://covidreport.org" target="_blank" class="nav-link-covid">Covid</a>
             <a href="https://trumpreport.info" target="_blank" class="nav-link-truth">Truth</a>
