This commit modifies the link text for the space navigation item in `page.html`, changing it from "Space!" to "Space" to maintain consistency in the navigation style. ]

--- a/templates/page.html
+++ b/templates/page.html
@@ -67,7 +67,7 @@
             <a href="https://news.thedetroitilove.com" target="_blank" class="nav-link-techno">Techno</a>
             <a href="https://covidreport.org" target="_blank" class="nav-link-covid">Covid</a>
             <a href="https://trumpreport.info" target="_blank" class="nav-link-truth">Truth</a>
-            <a href="https://news.spaceelevatorwiki.com" target="_blank" class="nav-link-space">Space!</a>
+            <a href="https://news.spaceelevatorwiki.com" target="_blank" class="nav-link-space">Space</a>
             <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank">Me</a>
           </div>
           <div class="nav-section-middle">
