fix weather credit location

--- a/templates/page.html
+++ b/templates/page.html
@@ -28,7 +28,12 @@
       <div id="weather-widget-container" class="weather-widget">
         <div id="weather-content">
           <a href="https://openweathermap.org" target="_blank" class="weather-link">
-            <div class="weather-content-inner">{{ weather_html }}</div>
+            <div id="weather-container" class="weather-container">
+              <div class="weather-content-inner">{{ weather_html }}</div>
+              <div id="weather-forecast" class="weather-forecast"></div>
+              <div id="weather-loading" class="weather-loading">Loading weather...</div>
+              <div id="weather-error" class="weather-error"></div>
+            </div>
             <div class="weather-attribution">Data by OpenWeather</div>
           </a>
         </div>
