weather test fix

--- a/templates/weather.css
+++ b/templates/weather.css
@@ -60,6 +60,10 @@
 #weather-container.loaded {
   visibility: visible;
 }
+
+.weather-forecast {
+  visibility: inherit;
+}
 #weather-widget-container.collapsed #weather-content {
   display: none;
 }
