--- a/templates/about.html
+++ b/templates/about.html
@@ -133,8 +133,8 @@
 
     <!-- Pass Flask variables to JavaScript -->
     <script>
-      window.isAdmin = "{{ 'true' if current_user.is_authenticated else 'false' }}";
-      window.flaskDebug = "{{ 'true' if config.DEBUG else 'false' }}";
+      window.isAdmin = {{ 'true' if current_user.is_authenticated else 'false' }};
+      window.flaskDebug = {{ 'true' if config.DEBUG else 'false' }};
       window.csrf_token = "{{ csrf_token() }}";
     </script>
   </body>
