--- a/templates/page.html
+++ b/templates/page.html
@@ -58,7 +58,7 @@
 
       <!-- Old Headlines Link -->
       <a href="/old_headlines" id="old-headlines-link" class="old-headlines-link">
-        <span class="old-headlines-title">📰 Old Headlines Archive</span>
+        <span class="old-headlines-title">📰 Recent Top Headlines</span>
       </a>
 
       <!-- Navigation Links - Moved here from nav section -->
